# pbcli

./: Cargo.toml
src/: api.rs  crypto.rs  error.rs  main.rs  opts.rs  privatebin.rs
