[package]
name = "pbcli"
description = """
pbcli is a command line client which allows to upload and download
pastes from privatebin directly from the command line.
"""
version = "2.5.1"
authors = ["Mydayyy"]
edition = "2021"
documentation = "https://github.com/Mydayyy/pbcli"
homepage = "https://github.com/Mydayyy/pbcli"
repository = "https://github.com/Mydayyy/pbcli"
keywords = ["privatebin", "pastebin", "pasteservice"]
categories = ["command-line-utilities"]
license = "Unlicense OR MIT"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "pbcli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
serde_with = "3.11.0"
miniz_oxide = "0.8.0"
ring = "0.17.8"
aes-gcm = { version = "0.10.3", features = ["aes"] }
bs58 = "0.5.1"
base64 = "0.22.1"
typenum = "1.14.0"
hex-literal = "0.4.1"
pbkdf2 = "0.9.0"
rand_core = { version = "0.6.3", features = ["std"] }
crypto-mac = "0.11.1"
hmac = "0.12.1"
sha2 = "0.10.8"
url = { version = "2.5.2", features = ["serde"] }
rand_chacha = "0.3.1"
dialoguer = "0.11.0"
data-url = "0.3.1"
mime_guess = "2.0.5"
terminal_size = "0.4.0"
parse-size = { version = "1.1.0", features = ["std"] }
uniffi = { version = "0.28.2", optional = true, features = ["cli"] }
openssl = { version = "0.10.68", features = ["vendored"] }
directories = "5.0.1"
log = "0.4.22"